...
            return currentNightscoutData
        }
    }
    
    func inTestMode() -> Bool {
        let dic = NSProcessInfo.processInfo().environment
        return dic["TEST"] != nil
    }
    
    private func generateHighBgTestData() -> NightscoutData {
        let bgData = NightscoutData()
        bgData.sgv = "200"
        bgData.bgdelta = 0
...
